# chai3d-with-HPGE

./: .gitignore  copyright.txt  fetch_dependencies_win.sh  guix.scm  meson.build  readme.org
extras/hdPhantom/: hdPhantom-VS2013.vcxproj  hdPhantom.cpp  hdPhantom.h
extras/hdPhantom/include/HD/: hd.h  hdDefines.h  hdExport.h
extras/hdPhantom/include/HL/: hlDefines.h
include/audio/: CAudioBuffer.h
include/devices/: CGenericHapticDevice.h  CMockDevice.h
include/effects/: CEffectViscosity.h
include/graphics/: CColor.h  CGenericArray.h  CPointArray.h  CSegmentArray.h
include/math/: CConstants.h  CGeometry.h  CMaths.h  CMatrix3d.h  CTransform.h  CVector3d.h
include/system/: CGlobals.h
include/timers/: CFrequencyCounter.h
include/tools/: CGenericTool.h
include/world/: CGenericObject.h
modules/cAPI/: .gitignore  .gitmodules  meson.build
modules/cAPI/src/: HPGE.h  errors.cc  hooks.cc  logging.cc  objects.cc  positions.cc  structs.h  thread.cc  transformation.cc  versioninfo.cc  versioninfo.hh  world.cc
modules/cAPI/test/: movement.cc
modules/cAPI/test/src/: benchmark-point.cc  debug.hh  template.cc  test-api.cc  test-base-device.cc  test-errors.cc  test-hook.cc  test-interpolation.cc  test-logging.cc  test-loop-frequency.cc  test-mock.cc  test-newthread.cc  test-objects.cc  test-point.cc  test-textures.cc  test-thread.cc  test-various.cc  test-workspace.cc
src/audio/: CAudioBuffer.cpp  CAudioDevice.cpp  CAudioSource.cpp
src/collisions/: CCollisionAABB.cpp
src/devices/: CDeltaDevices.cpp  CGenericHapticDevice.cpp  CHapticDeviceHandler.cpp  CMockDevice.cpp  CPhantomDevices.cpp
src/effects/: CEffectViscosity.cpp
src/files/: CFileModelSTL.cpp  CFileXML.cpp
src/forces/: CAlgorithmFingerProxy.cpp
src/graphics/: CMultiImage.cpp  CTriangleArray.cpp  CVideo.cpp
src/materials/: CMaterial.cpp
src/tools/: CGenericTool.cpp  CHapticPoint.cpp  CToolCursor.cpp
src/widgets/: CLabel.cpp
src/world/: CGenericObject.cpp  CMesh.cpp
test/: check_shape.cc
